Add Docker support and update service configurations

--- a/MaintenanceService/appsettings.json
+++ b/MaintenanceService/appsettings.json
@@ -8,11 +8,11 @@
   "AllowedHosts": "*",
   
   "ConnectionStrings": {
-    "MaintenanceDb": "Server=localhost;Database=maintenance_db;User Id=root;Password=09916028;SslMode=None"
+    "maintenance_db": "Server=localhost;Database=maintenance_db;User Id=root;Password=maram;SslMode=None"
   },
 
   "CarService": {
-    "BaseUrl": "http://localhost:3000"   
+    "BaseUrl": "http://car-service:3001"   
   }
 
 }
