--- a/reservation/docker-compose.yml
+++ b/reservation/docker-compose.yml
@@ -25,4 +25,4 @@ services:
     environment:
       DB_URL: jdbc:mysql://mysql-db:3306/reservation_db
       DB_USERNAME: root
-      DB_PASSWORD: root
+      DB_PASSWORD: rootpassword
